# rsomeip-bytes cargo manifest.
# More info: <https://doc.rust-lang.org/cargo/reference/manifest.html>

[package]
name = "rsomeip-bytes"
version = "0.1.0"
description = "Serialization crate for the SOME/IP on-wire format."
documentation = "https://docs.rs/rsomeip-bytes"
readme = "README.md"
keywords = ["someip", "bytes", "serialization"]
categories = ["automotive"]

# Inherited from workspace.
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.10.1"
thiserror = "2.0.14"

[lints]
workspace = true
