[package]
name = "rsomeip"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust implementation of AUTOSTAR's Scalable service-Oriented MiddlewarE over IP (SOME/IP)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsomeip-bytes = { path = "../rsomeip-bytes", version = "0.1.0" }
scc = "2.2.5"
tokio = { version = "1.29.1", features = [
    "net",
    "rt",
    "sync",
    "macros",
    "time",
] }
tokio-util = "0.7.10"

[dev-dependencies]
rand = "0.8.5"
tokio-test = "0.4.3"
